# diff_drive_bot_ws

./: .gitignore  Dockerfile  bashrc  entrypoint.sh
src/: CMakeLists.txt  package.xml  raspi_ros_compressed_video_streamer  raspi_ros_compressed_video_streamer.py  raspi_ros_video_streamer.py  raspi_ros_videro_streamer.py  raw images streaming.txt
src/description/: robot.urdf.xacro
src/diff_drive_bot_interfaces/: CMakeLists.txt  package.xml
src/diff_drive_bot_interfaces/msg/: FaceIdentification.msg  Intent.msg
src/diff_drive_bot_interfaces/srv/: FaceIdentification.srv  SaveWaypoints.srv  StartWaypointTask.srv  StartWaypointTasks.srv
src/face_recognition/: package.xml  setup.py
src/face_recognition/data/: face_embeddings.pkl
src/face_recognition/face_recognition/: face_recognition.py  recognition.py
src/face_recognition/launch/: face_recognition_cpu.launch.py
src/listen_talk_ros2/: package.xml  setup.py
src/listen_talk_ros2/config/: Ehi-robot_it_linux_v3_0_0.ppn  Hey-robot_en_linux_v3_0_0.ppn  Mobile-robot_en_linux_v3_0_0.rhn  (+1 more)
src/robot/: cource_map_serial.data
src/waypoint_tasking/: package.xml  setup.cfg  setup.py
src/waypoint_tasking/waypoint_tasking/: navigation.py  navigator.py  utils.py  waypoint_manager.py  waypoint_tasking.py
src/waypoint_tasking/waypoint_tasking/reports/: 2024-07-22 18:54:46.877530.txt  2024-07-22 19:13:27.595485.txt  2024-07-22 19:20:47.253236.txt
src/waypoint_tasking/waypoint_tasking/tasks/: face_recognition.py
src/waypoint_tasking/waypoint_tasking/waypoints/: cource.json  my_apartment.json  rob_lab.json
(+32 files in other folders)
